k8s_manifests/item_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: item-service
  name: item-service
spec:
  ports:
  - port: 9091
    protocol: TCP
    targetPort: 9091
  selector:
    app: item-service
  type: ClusterIP
