k8s_manifests/user_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: user-service
  name: user-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: user-service
  type: ClusterIP
status:
  loadBalancer: {}
