k8s_manifests/ingress-definition-with-tls-and-virtual-hosting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - iloveingress.com
    secretName: ingress-tls-new
  rules:
  - host: users.iloveingress.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081
  - host: products.iloveingress.com
    http:
      paths:              
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: item-service
            port:
              number: 9091
