k8s_manifests/ingress-definition-with-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.iloveingress.com
    secretName: ingress-tls
  rules:
  - host: api.iloveingress.com
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8081
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: item-service
            port:
              number: 9091
