k8s_manifests/ingress-definition-with-two-tls-and-virtual-hosting.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: users.iloveingress.com
    http:
      paths:
      - backend:
          service:
            name: user-service
            port:
              number: 8081
        path: /users
        pathType: Prefix
  - host: products.iloveingress.com
    http:
      paths:
      - backend:
          service:
            name: item-service
            port:
              number: 9091
        path: /products
        pathType: Prefix
  tls:
  - hosts:
    - users.iloveingress.com
    secretName: users.iloveingress.com
  - hosts:
    - products.iloveingress.com
    secretName: products.iloveingress.com
